test/cases/parser/FunNoName.errors
FunNoName.b:3:12: Syntax error (expected name)
