test/cases/parser/FunNoName.b
module Main
interface {
  function (x:i32):i32;
}